--- a/static/index.html
+++ b/static/index.html
@@ -9,9 +9,29 @@
 <body>
     <form action="/register" method="post">
         Email:<input type="text" name="email" id="email">
-        Name:<input type="text" name="name" id="name">
-        Password:<input type="text" name="password" id="password">
+        Name:<input type="text" name="login.name" id="login.name">
+        Password:<input type="text" name="login.password" id="login.password">
         <button>LOL</button>
     </form>
+
+    <script>
+        (async () => {
+            const rawResponse = await fetch('/login', {
+              method: 'POST',
+              headers: {
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify(
+                {
+                        name: "1234",
+                        password: "s"})
+                }
+            );
+            const content = await rawResponse.json();
+          
+            console.log(content);
+          })();
+    </script>
 </body>
 </html>
