--- a/static/index.html
+++ b/static/index.html
@@ -7,15 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/register" method="post">
-        Email:<input type="text" name="email" id="email">
-        Name:<input type="text" name="login.name" id="login.name">
-        Password:<input type="text" name="login.password" id="login.password">
-        <button>LOL</button>
-    </form>
-
     <script>
-        (async () => {
+        /*(async () => {
             const rawResponse = await fetch('/login', {
               method: 'POST',
               headers: {
@@ -31,7 +24,7 @@
             const content = await rawResponse.json();
           
             console.log(content);
-          })();
+          })();*/
 
         (async () => {
             const rawResponse = await fetch('/register', {
@@ -43,10 +36,10 @@
               body: JSON.stringify(
                 {
                     login: {
-                        name: "Pidfsfdsotr",
+                        name: "sdffds",
                         password: "toor"
                     }, 
-                    email: 'piotr.dsf.pl'})
+                    email: 'piotr.adfsdsf.pl'})
                 }
             );
             const content = await rawResponse.json();
