Working login and register

--- a/static/index.html
+++ b/static/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/register" method="post">
+    <!-- <form action="/register" method="post">
         Email:<input type="text" name="email" id="email">
         Name:<input type="text" name="login.name" id="login.name">
         Password:<input type="text" name="login.password" id="login.password">
         <button>LOL</button>
-    </form>
+    </form> -->
 
     <script>
         (async () => {
@@ -24,8 +24,8 @@
               },
               body: JSON.stringify(
                 {
-                        name: "1234",
-                        password: "s"})
+                        name: "chuj",
+                        password: "dup"})
                 }
             );
             const content = await rawResponse.json();
