validation system kinda works

--- a/static/index.html
+++ b/static/index.html
@@ -21,13 +21,13 @@
                         name: "root",
                         password: "toor"
                     }, 
-                    email: 'example@gmail.com',
+                    email: 'example@saas.com',
                     name: "Paweł",
                     surname: "Kowalski",
                     sex: 'M',
                     reputation: 1337,
                     address: {
-                      postalCode: "41-200",
+                      postalCode: "41-207",
                       street: "Jagiellonska",
                       number: 13,
                       country: "Poland"
