--- a/static/index.html
+++ b/static/index.html
@@ -18,10 +18,10 @@
               body: JSON.stringify(
                   {
                     login: {
-                        name: "root",
-                        password: "toor"
+                        name: "roota",
+                        password: "toora"
                     }, 
-                    email: 'example@saas.com',
+                    email: 'example@gmaial.com',
                     name: "Paweł",
                     surname: "Kowalski",
                     sex: 'M',
