added user credentials query

--- a/static/index.html
+++ b/static/index.html
@@ -52,8 +52,8 @@
               },
               body: JSON.stringify(
                 {
-                        name: "root",
-                        password: "toor"})
+                        name: "roota",
+                        password: "toora"})
                 }
             );
             const content = await rawResponse.json();
