Display all markers

--- a/static/index.html
+++ b/static/index.html
@@ -18,10 +18,10 @@
               body: JSON.stringify(
                   {
                     login: {
-                        name: "roota",
+			email: 'example@gmaial.com',
                         password: "toora"
                     }, 
-                    email: 'example@gmaial.com',
+                    username: "roota",
                     name: "Paweł",
                     surname: "Kowalski",
                     sex: 'M',
@@ -52,7 +52,7 @@
               },
               body: JSON.stringify(
                 {
-                        name: "root",
+			email: 'example@gmaial.com',
                         password: "toor"})
                 }
             );
