--- a/static/index.html
+++ b/static/index.html
@@ -18,10 +18,10 @@
               body: JSON.stringify(
                   {
                     login: {
-			email: 'example@gmaial.com',
-                        password: "toora"
+			email: 'example@gmail.com',
+                        password: "toor"
                     }, 
-                    username: "roota",
+                    username: "root",
                     name: "Paweł",
                     surname: "Kowalski",
                     sex: 'M',
@@ -52,8 +52,8 @@
               },
               body: JSON.stringify(
                 {
-			              email: 'example@gmaial.com',
-                    password: "toor"})
+			email: 'example@gmail.com',
+			password: "toor"})
                 }
             );
             const content = await rawResponse.json();
