salt generating by nanoid

--- a/static/index.html
+++ b/static/index.html
@@ -18,10 +18,10 @@
               body: JSON.stringify(
                   {
                     login: {
-			email: 'example@gmail.com',
+			email: 'example@sadsda.com',
                         password: "toor"
                     }, 
-                    username: "root",
+                    username: "lol",
                     name: "Paweł",
                     surname: "Kowalski",
                     sex: 'M',
