postal code validation and change sex query type to enum

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
               body: JSON.stringify(
                   {
                     login: {
-			email: 'example@sadsda.com',
+			email: 'example@sasad.com',
                         password: "toor"
                     }, 
                     username: "lol",
@@ -27,7 +27,7 @@
                     sex: 'M',
                     reputation: 1337,
                     address: {
-                      postalCode: "41-207",
+                      postalCode: "42-230",
                       street: "Jagiellonska",
                       number: 13,
                       country: "Poland"
