--- a/static/index.html
+++ b/static/index.html
@@ -18,13 +18,13 @@
               body: JSON.stringify(
                   {
                     login: {
-			email: 'example@sasad.com',
+			email: 'example@sdfgsdgf.com',
                         password: "toor"
                     }, 
-                    username: "lol",
+                    username: "sdgsdg",
                     name: "Paweł",
                     surname: "Kowalski",
-                    sex: 'M',
+                    sex: 'Other',
                     reputation: 1337,
                     address: {
                       postalCode: "42-230",
@@ -74,7 +74,7 @@
 				latitude:50.21212,
 				longtitude:1.12121,title:"pomoc dzieciom",
 				description:"sasas",
-				type:"A",
+				type:"NeighborHelp",
 				addTime:1665747948,
 				endTime:1666784387,
 				address: {
