ContactInfo added to readme.md

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<!--     <script>
+     <script>
         (async () => {
             const rawResponse = await fetch('/register', {
               method: 'POST',
@@ -60,7 +60,7 @@
           
             console.log("Login response: ", content);
           })();
-    </script> -->
+    </script>
     <script>
         (async () => {
             const rawResponse = await fetch('/add_marker', {
