validation for cookies

--- a/static/index.html
+++ b/static/index.html
@@ -18,10 +18,10 @@
               body: JSON.stringify(
                   {
                     login: {
-			email: 'example@sdfgsdgf.com',
+			email: 'example@gmail.com',
                         password: "toor"
                     }, 
-                    username: "sdgsdg",
+                    username: "root",
                     name: "Paweł",
                     surname: "Kowalski",
                     sex: 'Other',
@@ -96,8 +96,7 @@
 						type: "PhoneNumber",
 						val: "123456789"
 					}
-			        },
-			        userID:1})
+			        }})
                 }
             );
             const content = await rawResponse.json();
