house number is now a string

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
                     address: {
                       postalCode: "42-230",
                       street: "Jagiellonska",
-                      number: 13,
+                      number: "13",
                       country: "Poland"
                     }
                   }
@@ -80,7 +80,7 @@
 				address: {
 					postalCode: "41-207",
 					street: "Jagiellonska",
-					number: 13,
+					number: "13",
 					country: "Poland"
 				},
 			        contactInfo:{
@@ -89,7 +89,7 @@
 					address: {
 						postalCode: "41-207",
 						street: "Jagiellonska",
-						number: 13,
+						number: "13",
 						country: "Poland"
 					},
 					method:{
