maybe better array errors, DO NOT PULL

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
               body: JSON.stringify(
                   {
                     login: {
-			email: 'example@gmail.com',
+			email: 'example.com',
                         password: "toor"
                     }, 
                     username: "root",
@@ -27,7 +27,7 @@
                     sex: 'Other',
                     reputation: 1337,
                     address: {
-                      postalCode: "42-230",
+                      postalCode: "42-2304",
                       street: "Jagiellonska",
                       number: "13",
                       country: "Poland"
