added route for getting markers by city; general improvements

--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,7 @@
                     address: {
                       postalCode: "42-230",
                       street: "Jagiellonska",
+                      city: "Sosnowiec",
                       number: "13",
                     }
                   }
@@ -76,6 +77,7 @@
 				endTime:1666784387,
 				address: {
 					postalCode: "41-207",
+          city: "Sosnowiec",
 					street: "Jagiellonska",
 					number: "13",
 				},
@@ -84,6 +86,7 @@
 					surname: "Kowalksi",
 					address: {
 						postalCode: "41-207",
+            city: "Sosnowiec",
 						street: "Jagiellonska",
 						number: "13",
 					},
