Fixed major typo (longtitude -> longitude)

--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@
               body: JSON.stringify(
 		      {
 				latitude:50.21212,
-				longtitude:1.12121,title:"pomoc dzieciom",
+				longitude:1.12121,title:"pomoc dzieciom",
 				description:"sasas",
 				type:"NeighborHelp",
 				endTime:1666784387,
