route for getting public user info

--- a/static/index.html
+++ b/static/index.html
@@ -18,18 +18,18 @@
               body: JSON.stringify(
                   {
                     login: {
-			email: 'example@gmail.com',
+			email: 'example@gmąil.com',
                         password: "toor"
                     }, 
-                    username: "root",
+                    username: "roót",
                     name: "Paweł",
-                    surname: "Kowalski",
+                    surname: "Kowałski",
                     sex: 'Other',
                     address: {
                       postalCode: "43-789",
-                      street: "Jagiellonska",
-                      city: "Sosnowiec",
-                      number: "13",
+                      street: "Jagięllonska",
+                      city: "Sośnowiec",
+                      number: "12",
                     }
                   }
                 )
@@ -51,7 +51,7 @@
               },
               body: JSON.stringify(
                 {
-			email: 'example@gmail.com',
+			email: 'example@gmąil.com',
 			password: "toor"})
                 }
             );
@@ -77,7 +77,7 @@
 				endTime:1666784387,
 				address: {
 					postalCode: "41-207",
-          city: "Sosnowiec",
+					city: "Sośnowiec",
 					street: "Jagiellonska",
 					number: "13",
 				},
@@ -86,7 +86,7 @@
 					surname: "Kowalksi",
 					address: {
 						postalCode: "41-207",
-            city: "Sosnowiec",
+						city: "Sosnowiec",
 						street: "Jagiellonska",
 						number: "13",
 					},
