Validator has such a bad structure

--- a/static/index.html
+++ b/static/index.html
@@ -17,16 +17,14 @@
               },
               body: JSON.stringify(
                   {
-                    login: {
-			email: 'example@gmąil.com',
-                        password: "toor"
-                    }, 
-                    username: "roót",
+			email: 'gmail.com',
+                        password: "toor",
+                    username: "riot",
                     name: "Paweł",
                     surname: "Kowałski",
                     sex: 'Other',
                     address: {
-                      postalCode: "43-789",
+                      postalCode: "4789",
                       street: "Jagięllonska",
                       city: "Sośnowiec",
                       number: "12",
