--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,10 @@
               },
               body: JSON.stringify(
                   {
+		    login:{
 			email: 'gmail.com',
-                        password: "toor",
+                        password: "toor"
+		    },
                     username: "riot",
                     name: "Paweł",
                     surname: "Kowałski",
