add_marker [POST] -> markers [PUT]

--- a/static/index.html
+++ b/static/index.html
@@ -62,8 +62,8 @@
     </script>
     <script>
         (async () => {
-            const rawResponse = await fetch('/add_marker', {
-              method: 'POST',
+            const rawResponse = await fetch('/marker', {
+              method: 'PUT',
               headers: {
                 'Accept': 'application/json',
                 'Content-Type': 'application/json'
